--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<pre>
-       IT総合研修大学図書館
+       IT総合研修大学図書館<br>
 
 １．お知らせ
 このIT総合研修大学図書館は<実際には存在しません>
@@ -35,4 +34,3 @@
 
 ---------------------------
 IT総合研修図書館運営委員会
-</pre>
