--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-       IT総合研修大学図書館<br>
+       <h1>IT総合研修大学図書館</h1>
 
 １．お知らせ
 <p>
@@ -18,7 +18,7 @@
 
 ３．各種サービスへのリンク
   一覧
-  ・CiNii Research https://cir.nii.ac.jp/ja
+  ・<a href="https://cir.nii.ac.jp/ja">CiNii Research</a>
   ・国立国会図書館サーチ https://iss.ndl.go.jp/
 
 ４．コレクション紹介
