--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-       <h1>IT総合研修大学図書館</h1>
+       <h1 id="top">IT総合研修大学図書館</h1>
 
 １．お知らせ
-<p>
-このIT総合研修大学図書館は<実際には存在しません>
-受講生のみなさまの心の中&lt;only&gt;で存在をしています。
-</p>
+<p>このIT総合研修大学図書館は<実際には存在しません>
+受講生のみなさまの心の中&lt;only&gt;で存在をしています。</p>
 
 ２．ご利用案内
   （１）開館
@@ -18,8 +16,10 @@
 
 ３．各種サービスへのリンク
   一覧
-  ・<a href="https://cir.nii.ac.jp/ja">CiNii Research</a>
-  ・国立国会図書館サーチ https://iss.ndl.go.jp/
+  <ul>
+    <li><a href="https://cir.nii.ac.jp/ja">CiNii Research</a></li>
+    <li><a href="https://iss.ndl.go.jp/">国立国会図書館サーチ</a></li>
+  </ul>
 
 ４．コレクション紹介
   The IT総合研修大学所蔵コレクション
@@ -32,7 +32,7 @@
 ６．お問合せ
   ・お問合せフォームへのリンク
 
-ページのトップへ
+<a href="#top">ページのトップへ</a>
 
 ---------------------------
 IT総合研修図書館運営委員会
