--- a/index.html
+++ b/index.html
@@ -1,38 +1,62 @@
-       <h1 id="top">IT総合研修大学図書館</h1>
+<!DOCTYPE html>
+<html lang="ja" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>IT総合研修大学図書館</title>
+    <link rel="stylesheet" href="./css/style.css">
+  </head>
+  <body>
+    <h1 id="top" style="color: green">IT総合研修大学図書館</h1>
 
-１．お知らせ
-<p>このIT総合研修大学図書館は<実際には存在しません>
-受講生のみなさまの心の中&lt;only&gt;で存在をしています。</p>
+    <h2 id="fst">１．お知らせ</h2>
+    <p>このIT総合研修大学図書館は&lt;<span class="superimportant">実際には存在しません</span>&gt;<br>
+    受講生のみなさまの心の中&lt;only&gt;で存在をしています。</p>
 
-２．ご利用案内
-  （１）開館
-     曜日 | 時刻
-　   -----------
-     月～金 | 9時～17時
-     土 | 10時～15時
-     日 | 休館 |
-  （２）アクセスマップ
-　　　
+    <h2>２．ご利用案内</h2>
+      <h3>（１）開館</h3>
+         <table border="1">
+           <tr>
+             <td>曜日</td>
+             <td>時刻</td>
+           </tr>
+           <tr>
+             <td>月～金</td>
+             <td>9時～17時</td>
+           </tr>
+           <tr>
+             <td>土</td>
+             <td>10時～15時</td>
+           </tr>
+           <tr>
+             <td>日</td>
+             <td><span class="superimportant">休館</span></td>
+           </tr>
+         </table>
 
-３．各種サービスへのリンク
-  一覧
-  <ul>
-    <li><a href="https://cir.nii.ac.jp/ja">CiNii Research</a></li>
-    <li><a href="https://iss.ndl.go.jp/">国立国会図書館サーチ</a></li>
-  </ul>
+      <h3>（２）アクセスマップ</h3>
+    　　　
 
-４．コレクション紹介
-  The IT総合研修大学所蔵コレクション
-    IT総合研修大学で集めたつもりのコレクションです。実際は存在しません。
+    <h2 id="fst">３．各種サービスへのリンク</h2>
+      一覧
+      <ul>
+        <li><a href="https://cir.nii.ac.jp/ja">CiNii Research</a></li>
+        <li><a href="https://iss.ndl.go.jp/">国立国会図書館サーチ</a></li>
+      </ul>
 
-５．館長あいさつ
-  館長から以下の挨拶をいただきました。
-    「図書館は成長する有機体」と申します。IT総合研修図書館では...
+    <h2>４．コレクション紹介</h2>
+      <h3>The IT総合研修大学所蔵コレクション</h3>
+        IT総合研修大学で集めたつもりのコレクションです。実際は存在しません。
 
-６．お問合せ
-  ・お問合せフォームへのリンク
+    <h2>５．館長あいさつ</h2>
+      館長から以下の挨拶をいただきました。<br>
+        「図書館は成長する有機体」と申します。IT総合研修図書館では...
 
-<a href="#top">ページのトップへ</a>
+    <h2>６．お問合せ</h2>
+      <p>お問合せフォームへのリンク</p>
 
----------------------------
-IT総合研修図書館運営委員会
+      <a href="#top">ページのトップへ</a>
+
+    <hr>
+    IT総合研修図書館運営委員会
+  </body>
+</html>
